--- a/server/build.gradle
+++ b/server/build.gradle
@@ -27,9 +27,16 @@ dependencies {
 	implementation 'com.google.code.gson:gson:2.12.1'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'	
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+
+	maxHeapSize = '1G'
+
+	testLogging {
+			events "passed"
+	}
 }
