--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-router": "^7.2.0",
     "react-use-websocket": "^4.13.0",
     "zod": "^3.24.2"
   },
