--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,10 +15,10 @@
         android:theme="@style/Theme.DicerealmAndroid"
         tools:targetApi="31">
         <activity
-            android:name=".CharacterScreen"
+            android:name=".activity.CharacterScreen"
             android:exported="false" />
         <activity
-            android:name=".HomeActivity"
+            android:name=".activity.HomeActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
