--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,9 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DicerealmAndroid"
         tools:targetApi="31">
+
         <activity
             android:name=".activity.CharacterScreen"
-            android:exported="false" />
+            android:exported="false"
+
+            />
         <activity
             android:name=".activity.HomeActivity"
             android:exported="false" />
