--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         tools:targetApi="31">
 
         <activity
+            android:name=".activity.RoomScreen"
+            android:exported="false" />
+        <activity
             android:name=".activity.CharacterScreen"
             android:exported="false"
 
