--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DicerealmAndroid"
         tools:targetApi="31">
-
+        <activity
+            android:name=".activity.DialogScreen"
+            android:exported="false" />
         <activity
             android:name=".activity.RoomScreen"
             android:exported="false" />
@@ -24,9 +26,7 @@
             android:exported="false" />
         <activity
             android:name=".activity.CharacterScreen"
-            android:exported="false"
-
-            />
+            android:exported="false" />
         <activity
             android:name=".activity.HomeActivity"
             android:exported="false" />
