--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.DicerealmAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".activity.CombatScreen"
+            android:exported="false" />
+        <activity
             android:name=".activity.DialogScreen"
             android:exported="false" />
         <activity
@@ -23,9 +26,7 @@
             android:exported="false" />
         <activity
             android:name=".activity.CharacterScreen"
-            android:exported="false"
-
-            />
+            android:exported="false" />
         <activity
             android:name=".activity.HomeActivity"
             android:exported="false" />
